# rust_simple_sns_api

./: .env.sample  Cargo.toml  README.md  docker-compose.yaml
docker/api/: Dockerfile
docker/db/: init.sql
migrations/2022-01-22-124026_create_users/: up.sql
src/: db.rs  env.rs  main.rs  schema.rs
src/modules/account/: account_service.rs
src/modules/user/: mod.rs  user_dto.rs  user_entity.rs  user_repository.rs
