[package]
name = "rust-simple-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
diesel = { version = "1.4.8", features = ["mysql", "r2d2", "chrono"] }
dotenv = "0.15.0"
log = "0.4.14"
r2d2 = "0.8.9"
serde = "1"